--- a/onebook.html
+++ b/onebook.html
@@ -124,7 +124,8 @@
 
           // Check if the book is available or not
           if (book.availability) {
-            window.location.href = `/new_loan.html?book_id=${book_id}`;
+            window.location.href = `https://your-render-app/edit_book.html?book_id=${book_id}`;
+`;
           } else {
             alert("Book is unavailable");
           }
