--- a/onebook.html
+++ b/onebook.html
@@ -124,7 +124,7 @@
 
           // Check if the book is available or not
           if (book.availability) {
-            window.location.href = `${my_server}/edit_book.html?book_id=${book_id}`;
+            window.location.href =`/edit_book.html?book_id=${book_id}`;
 `;
           } else {
             alert("Book is unavailable");
