--- a/onebook.html
+++ b/onebook.html
@@ -140,7 +140,7 @@
         const editButton = document.getElementById('edit-book');
         editButton.addEventListener('click', function (event) {
           event.preventDefault();
-          window.location.href = `/edit_book.html?book_id=${book_id}`;
+          window.location.href = `edit_book.html?book_id=${book_id}`;
         });
        // return--------------------------------------------------------
         const returnButton = document.getElementById('return-book');
