--- a/add_book.html
+++ b/add_book.html
@@ -89,7 +89,7 @@
             axios.post(`${my_server}/booksnew`, book)
             .then(function (response) {
                         alert('Book added successfully');
-                        window.location.href = '/books.html';
+                        window.location.href = 'books.html';
                     })
                 .catch(function (error) {
                     console.log(error); // Display error message
